<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_track"
        android:text="@string/track"
        android:textSize="20sp"
        android:padding="8dp"
        android:textAllCaps="false"
        android:background="@color/track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_track"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/et_description"
        tools:text="@string/track_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_label" />

    <TextView
        android:id="@+id/tv_amplitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amplitude_description"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_amplitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_amplitude" />




    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/et_amplitude"
        android:hint="@string/date_description"
        android:onClick="showDatePickerDialog"/>

    <EditText
        android:id="@+id/et_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_date"
        android:ems="10"
        android:hint="@string/time_description"
        android:onClick="showTimePickerDialog"
        android:inputType="time"/>



    <TextView
        android:id="@+id/tv_type_label"
        android:text="@string/type_description"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/et_time"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/sp_type"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_type_label"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/check"
        android:onClick="insertNewRecord"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/sp_type"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/save" />


</android.support.constraint.ConstraintLayout>