<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/label_remind"
        android:text="@string/reminder"
        android:textSize="20sp"
        android:padding="8dp"
        android:textAllCaps="false"
        android:background="@color/reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/label_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        tools:text="@string/reminder_example" />

    <TextView
        android:id="@+id/tv_dose_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dosage" />

    <EditText
        android:id="@+id/et_dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_datetime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date and Time" />


    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date_description"
        android:onClick="showDatePickerDialog"/>
    <EditText
        android:id="@+id/et_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/time_description"
        android:onClick="showTimePickerDialog"
        android:inputType="time"/>



            <TextView
                android:id="@+id/tv_type_label"
                android:text="@string/type_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/sp_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/check"
        android:onClick="insertNewRecord"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/save" />


</android.support.constraint.ConstraintLayout>