<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <Button
        android:id="@+id/btn_notification_settings"
        android:text="@string/notification_settings"
        android:background="@color/colorDetailed"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="openDetailedTask"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_notes"
        android:text="@string/notes_view"
        android:background="@color/colorDetailed"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="openDetailedTask"
        app:layout_constraintTop_toBottomOf="@id/btn_notification_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_report"
        android:text="@string/reports"
        android:background="@color/colorDetailed"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="openDetailedTask"
        app:layout_constraintTop_toBottomOf="@id/btn_notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_medhistory"
        android:text="@string/med_history"
        android:background="@color/colorDetailed"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="openDetailedTask"
        app:layout_constraintTop_toBottomOf="@id/btn_notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>


</android.support.constraint.ConstraintLayout>