<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRemindersFragment">

    <TextView
        android:id="@+id/label_viewreminders"
        android:text="@string/notification_settings"
        android:textSize="20sp"
        android:padding="8dp"
        android:textAllCaps="false"
        android:background="@color/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/instructions_deletereminders"
        android:text="@string/how_to_delete_reminders"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@color/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_viewreminders"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_viewreminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_deletereminders"
        />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:background="@color/save"
        android:textSize="20sp"
        android:onClick="handleButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>